# AMD-PACE

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_requirements.txt  pyproject.toml  requirements.txt  setup.py
cmake/: BuildAOCLDLP.cmake  BuildFBGEMM.cmake  BuildJITBackend.cmake  BuildLIBXSMM.cmake
csrc/: CMakeLists.txt
csrc/core/: logging.h
csrc/ops/: CMakeLists.txt  aocl_dlp_linear.cpp  aocl_dlp_linear.h  attention.cpp  attention.h  binary.cpp  embeddingbag.cpp  exp_approx.h  jit_helper.h  libxsmm_linear.cpp  libxsmm_linear.h  linear.cpp  mlp.cpp  norm.cpp  norm.h  paged_attention.cpp  paged_attention.h  prefill_attention.cpp  prefill_attention.h  rope.cpp  rope.h  slab_attention.cpp  slab_attention.h
demos/: README.md  pace_server_speculative_demo.py  server_chat_demo.py
docs/: Contributing.md  CoreFunctions.md  InferenceServer.md  InferenceServerMonitoring.md  LLM.md  MLPerf.md  Ops.md  PerformanceGuide.md  PythonOps.md  SlabAttention.md  SpeculativeDecoding.md
examples/: multi_instance_sd_pace.py  pace_gpt-oss_chat.ipynb  pace_llm_basic.py  pace_llm_pard.py  pace_sarvam_translate_quickstart.ipynb  pace_server_basic.py  playbook_server.ipynb  playbook_server_speculative.ipynb
pace/: __init__.py  _register_fake.py  version.py
pace/llm/: __init__.py  configs.py  generator.py  llm.py  ops.py  sampler.py  speculative.py  stopping_criteria.py
pace/ops/: __init__.py  activations.py  enum.py  fused_linear.py  linear.py  normalization.py  rotary_embedding.py
pace/server/: launcher.py  model_list.py  utils.py
pace/utils/: logging.py  (+1 more)
(+129 files in other folders)
